welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: warning: enclosing method isTeen has result type Unit: return value discarded
  return (age <= 19 && age >= 13)
  ^loneTeen:6: error: value || is not a member of Unit
  return (isTeen(a) || isTeen(b)) && !(isTeen(a) && isTeen(b))
                    ^loneTeen:6: error: value && is not a member of Unit
  return (isTeen(a) || isTeen(b)) && !(isTeen(a) && isTeen(b))
                                                 ^